# aoc2022

./: README.md  pyproject.toml
day-01/: README.md  main.py
day-01/1-calories/: main.py
day-02/: README.md  main.py
day-03/: README.md  main.py
day-04/: README.md  main.py
day-05/: README.md  main.py
day-06/: README.md  main.py
day-08/: README.md  main.py
